# umlforge-connector

./: .gitignore  LICENSE  README.md  pyproject.toml  server.json
connector/: README.md  __main__.py  api_client.py  config.py  requirements.txt  server.py  tools.py
